# megacmd-bot

./: .gitignore  main.py  pyproject.toml  test.py
bot/: __main__.py  misc.py
bot/config/: config.py  example_settings.json
bot/db/: __init__.py  database.py  models.py
bot/handlers/: handler.py
bot/keyboards/: __init__.py  cd_ls.py  factory_kb.py  main_menu.py
bot/lexicon/: lexicon.py
bot/services/: keyboard.py  megacmd.py  other.py
